--- a/package.json
+++ b/package.json
@@ -46,8 +46,12 @@
         "archive:ios:release": "pod install --project-directory=ios && npm run set-env -- --env prod && xcodebuild clean archive -workspace ./ios/Owners.xcworkspace -configuration Release -scheme Owners -archivePath ./ios/build/release/com.winnebago.owners.xcarchive && xcodebuild -exportArchive -archivePath ./ios/build/release/com.winnebago.owners.xcarchive -exportPath ./ios/build/release -exportOptionsPlist ./ios/ExportOptions.Release.plist"
     },
     "dependencies": {
+        "@react-navigation/native": "^6.1.6",
         "react": "18.2.0",
-        "react-native": "0.71.7"
+        "react-native": "0.71.7",
+        "react-native-orientation-locker": "^1.5.0",
+        "react-native-safe-area-context": "^4.5.1",
+        "react-native-screens": "^3.20.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
