--- a/package.json
+++ b/package.json
@@ -46,12 +46,17 @@
         "archive:ios:release": "pod install --project-directory=ios && npm run set-env -- --env prod && xcodebuild clean archive -workspace ./ios/Owners.xcworkspace -configuration Release -scheme Owners -archivePath ./ios/build/release/com.winnebago.owners.xcarchive && xcodebuild -exportArchive -archivePath ./ios/build/release/com.winnebago.owners.xcarchive -exportPath ./ios/build/release -exportOptionsPlist ./ios/ExportOptions.Release.plist"
     },
     "dependencies": {
+        "@react-navigation/bottom-tabs": "^6.5.7",
         "@react-navigation/native": "^6.1.6",
+        "@react-navigation/native-stack": "^6.9.12",
+        "mobx": "^6.9.0",
+        "mobx-react": "^7.6.0",
         "react": "18.2.0",
         "react-native": "0.71.7",
         "react-native-orientation-locker": "^1.5.0",
         "react-native-safe-area-context": "^4.5.1",
-        "react-native-screens": "^3.20.0"
+        "react-native-screens": "^3.20.0",
+        "react-native-svg": "^13.9.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
@@ -68,6 +73,7 @@
         "jest": "^29.2.1",
         "metro-react-native-babel-preset": "0.73.9",
         "prettier": "^2.4.1",
+        "react-native-svg-transformer": "^1.0.0",
         "react-test-renderer": "18.2.0",
         "typescript": "4.8.4"
     },
