--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,5 +21,9 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyDcvvk0SykdUT3YEjIxq8lL89Ip14VzPlU"/>
     </application>
 </manifest>
